# deer_me

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
docs/: LESSONS_LEARNED.md  ROADMAP.md
examples/: 01_basic_walk.py  02_walk_and_graze.py  03_full_sequence.py  04_render_demo.py
scripts/: run_in_blender.py  setup_blender.py
src/deer_me/: __init__.py
src/deer_me/adapter/: keyframe.py  rig.py  scene.py  skin.py
src/deer_me/api/: deer.py  presets.py  sequence.py
src/deer_me/core/: gaits.py  ik_solver.py  interpolation.py  skeleton.py  spine.py  state_machine.py  types.py
tests/integration/: conftest.py  test_full_sequence.py  test_rig_roundtrip.py
tests/unit/: test_deer_api.py  test_gaits.py  test_ik_solver.py  test_interpolation.py  test_presets.py  test_sequence.py  test_skeleton.py  test_spine.py  test_state_machine.py  test_types.py
